k8s/frontend-service/frontend-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: frontend-service
  name: frontend-service

spec:
  replicas: 1

  selector:
    matchLabels:
      io.kompose.service: frontend-service

  strategy:
    type: Recreate

  template:
    metadata:
      labels:
        io.kompose.service: frontend-service
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: frontend-sa  
      automountServiceAccountToken: false
      containers:
        - image: nginx:alpine
          name: frontend-service
          imagePullPolicy: Always

          ports:
            - containerPort: 80
              protocol: TCP

          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10

      restartPolicy: Always

      volumes:
        - configMap:
            name: frontend-html
          name: html
        - name: nginx-conf
          configMap:
            name: frontend-nginx
