k8s/frontend-service/frontend-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: frontend-service
  name: frontend-service

spec:
  selector:
    io.kompose.service: frontend-service

  ports:
    - name: http
      port: 80
      targetPort: 80
