k8s/frontend-service/api-egress-lock.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-egress-lock
  namespace: default
spec:
  podSelector:
    matchLabels:
      io.kompose.service: frontend-service
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          io.kompose.service: api-service
    ports:
    - protocol: TCP
      port: 8081
