k8s/frontend-service/api-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-egress
spec:
  podSelector:
    matchLabels:
      io.kompose.service: api-service
  egress:
  - to:
    - podSelector:
        matchLabels:
          io.kompose.service: backend-service
    ports:
    - protocol: TCP
      port: 8080
  - to:
    - podSelector:
        matchLabels:
          io.kompose.service: frontend-service
    ports:
    - protocol: TCP
      port: 80
  policyTypes:
  - Egress
