k8s/frontend-service/api-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-to-frontend
spec:
  podSelector:
    matchLabels:
      io.kompose.service: frontend-service
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.service: api-service
    ports:
    - protocol: TCP
      port: 80
  policyTypes:
  - Ingress
