k8s/frontend-service/backend-api-service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-api
spec:
  podSelector:
    matchLabels:
      io.kompose.service: api-service
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.service: backend-service
  policyTypes:
    - Ingress
