k8s/frontend-service/backend-egress-lock.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-egress-lock
  namespace: default
spec:
  podSelector:
    matchLabels:
      io.kompose.service: backend-service
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          io.kompose.service: api-service
    ports:
    - protocol: TCP
      port: 8080
